--- a/config.yaml
+++ b/config.yaml
@@ -2,20 +2,25 @@ logLevel: 4
 
 tempLevel:
   level1:
-    temp: 40.0
+    temp: 40
     speed: 30
   level2:
-    temp: 50.0
+    temp: 50
     speed: 50
   level3:
-    temp: 60.0
+    temp: 60
     speed: 70
   level4:
-    temp: 70.0
+    temp: 70
     speed: 90
   level5:
-    temp: 80.0
+    temp: 80
     speed: 100
 
 monitor:
   duration: 10 # 监测间隔，单位 秒
+
+ipmi:
+  host: 127.0.0.1
+  user: root
+  pwd: calvin
